--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>More Information</h1>
-    <a href="/more.html">Learn More</a>
+    <a href="/information/more.html">Learn More</a>
 </body>
 </html>
