--- a/index.html
+++ b/index.html
@@ -4,9 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body, html {
+          height: 100%;
+          position: relative;
+          overflow: hidden;
+        }
+        h1 {
+          position: absolute;
+          transition: transform .5s;
+        }
+        #mkgLogo {
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          animation: colorChange 4s infinite;
+          z-index: 999;
+        }
+        #linkDiv {
+          display: flex;
+          justify-content: center;
+          font-size: 26px;
+        }
+        @keyframes colorChange {
+            0% { fill: #ff4053; }
+            12% { fill: #ff9d00; }
+            25% { fill: #fff700; }
+            37% { fill: #22ff00; }
+            49% { fill: #00ddff; }
+            61% { fill: #0004ff; }
+            73% { fill: #7b00ff; }
+            92% { fill: #ff00d0; }
+            100% { fill: #ff4053; } /* Loop back to the first color */
+        }
+    </style>
 </head>
 <body>
+    <div id="linkDiv"><a href="/information/more.html">Learn More</a></div>
     <h1>More Information</h1>
-    <a href="/information/more.html">Learn More</a>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <h1>More Information</h1>
+    <a href="file:///C:/Users/pmedlin/Desktop/mk-gartner/index.html">
+      <svg id="mkgLogo" width="199.811" height="93.874" viewBox="0 0 52.867 24.837" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+        <g style="stroke-width:1.18738">
+          <path id="mkgPath" d="m37.118 16.66-2.966 13.702 11.6-.005-5.212-6.726 7.3-6.97zM4.541 31.812c-.473.728-.797 
+            1.525-.996 2.457-.155.707-.17 2.416-.025 3.114.19.936.648 2.048 1.111 2.685l.164.23h5.481v-5.531H6.638l.01 1.106.016 
+            1.111.712.015.708.015v.543H6.335l-.07-.164c-.2-.474-.249-.802-.244-1.58.005-.717.015-.802.15-1.196l.144-.423 1.983-.015 
+            1.978-.01v-2.74h-5.48Zm12.113-.334c-2.093.25-3.727 1.67-4.734 4.116-.503 1.236-.807 2.676-.911 4.365l-.025.339h2.63v-.294c0-.165.035-.563.075-.887.264-1.983  
+            1.002-3.403 2.207-4.245l.16-.11v2.147H14.56v2.013h1.495v1.376h2.441v-8.869l-.757.005c-.419.005-.907.025-1.086.045zm2.491 4.38v4.44h2.491v-2.193h.738l.732.005 
+            1.22 1.615c.668.886 1.236 1.604 1.256 
+            1.589.02-.01.429-.468.912-1.016.608-.693.867-1.017.837-1.062-.02-.04-.373-.508-.782-1.046l-.737-.977.184-.214c.23-.269.488-.812.598-1.26.124-.499.114-1.515-.02-2.028-.274-1.047-.952-1.78-1.968-2.118l-.404-.14-2.526-.014-2.531-.015zm4.53-1.719c.223.12.323.314.323.638.005.234-.02.304-.12.413-.239.255-.323.274-1.32.274h-.922V34.07h.947s.981.015 
+            1.091.07zm3.592-1.34v1.37h1.395l.01 3.05.015 3.054 1.235.015 1.23.01v-6.129h1.396v-2.74h-5.281zm6.063-1.335c-.02.014-.035 2.012-.035 4.434v4.4h2.441v-5.536l.155.09c.09.05.349.269.578.483 
+            1.066 1.006 1.814 2.725 1.894 4.375l.03.588h2.426v-8.869h-2.441v2.74c-.188-.703-1.49-2.45-3.134-2.666-.539-.074-1.854-.1-1.914-.04zm8.186-.035v8.868h5.78v-2.74h-3.288v-.597h2.291v-2.193h-2.291v-.598h3.288v-2.74h-2.89zm6.428 
+            4.429v4.44h2.491v-2.193h.738l.732.005 1.146 1.52c.633.832 1.18 1.564 1.226 
+            1.624.08.1.104.075.986-.932l.907-1.03-.12-.155c-.064-.09-.413-.558-.777-1.042l-.657-.882.199-.249c.254-.324.433-.707.558-1.19.13-.499.14-1.42.02-1.954-.244-1.076-.962-1.883-1.988-2.227l-.404-.14-2.526-.014-2.531-.015zm4.564-1.694c.314.194.398.723.164 
+            1.021-.199.255-.314.28-1.315.28h-.922v-1.396h.962c.852 0 .971.01 1.11.095zm-42.476-3.777 21.356.005 3.301-13.731-9.75 8.071 1.554-8.071z" transform="matrix(.84244 0 0 .84194 1.327 -11.951)"/>
+        </g>
+      </svg>
+    </a>
+    <script>
+        function moveH1() {
+          let h1s = document.querySelectorAll('h1');
+          h1s.forEach(h1 => {
+              const x = Math.random() * window.innerWidth-100;
+              const y = Math.random() * window.innerHeight-50;
+              h1.style.transform = `translate(${x}px, ${y}px)`;
+          });
+        }
+        function addH1() {
+          const newH1 = document.createElement('h1');
+          newH1.textContent = 'More Information';
+          const x = Math.random() * window.innerWidth/4;
+          const y = Math.random() * window.innerHeight/2;
+          newH1.style.position = 'absolute';
+          newH1.style.transform = `translate(${x}px, ${y}px)`;
+          document.body.appendChild(newH1);
+        }
+        function makeH1Bigger(){
+            let h1s = document.querySelectorAll('h1');
+            h1s.forEach(h1 => {
+                let currentSize = parseFloat(window.getComputedStyle(h1).fontSize);
+                h1.style.fontSize = `${currentSize + 5}px`;
+            });
+        }
+        setInterval(moveH1, 500);
+        setInterval(addH1, 1000);
+        setInterval(makeH1Bigger, 500);
+    </script>
 </body>
 </html>
