Update favicon and add more stuff.

--- a/more.html
+++ b/more.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>More</title>
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <style>
@@ -32,8 +33,23 @@
             92% { fill: #ff00d0; }
             100% { fill: #ff4053; } /* Loop back to the first color */
         }
+        .btn {
+            text-decoration: none;
+            padding: 0.5rem;
+            background-color: rgb(61, 61, 61);
+            color: white;
+            border: 3px solid #7b78ff;
+            border-radius: 6px;
+            margin-top: 25px;
+            z-index: 1;
+        }
+        #linkDiv {
+          display: flex;
+          justify-content: center;
+          font-size: 26px;
+        }
     </style>
-    <button>Continue</button>
+    <div id="linkDiv"><a class="btn" href="/information/continued.html">Continue</a></div>
     <h1 class="more">More</h1>
     <a href="file:///C:/Users/pmedlin/Desktop/mk-gartner/index.html">
         <svg id="mkgLogo" width="199.811" height="93.874" viewBox="0 0 52.867 24.837" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
