--- a/more.html
+++ b/more.html
@@ -51,7 +51,7 @@
     </style>
     <div id="linkDiv"><a class="btn" href="/information/continued.html">Continue</a></div>
     <h1 class="more">More</h1>
-    <a href="file:///C:/Users/pmedlin/Desktop/mk-gartner/index.html">
+    <a href="parkermedlin.github.io/mk-gartner">
         <svg id="mkgLogo" width="199.811" height="93.874" viewBox="0 0 52.867 24.837" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
           <g style="stroke-width:1.18738">
             <path id="mkgPath" d="m37.118 16.66-2.966 13.702 11.6-.005-5.212-6.726 7.3-6.97zM4.541 31.812c-.473.728-.797 
