Remove old logo

--- a/continued.html
+++ b/continued.html
@@ -52,7 +52,7 @@
     <h1>More Information</h1>
     <h1>More Information</h1>
     <h1>More Information</h1>
-    <a href="https://parkermedlin.github.io/mk-gartner/">
+    <!-- <a href="https://parkermedlin.github.io/mk-gartner/">
       <svg id="mkgLogo" width="199.811" height="93.874" viewBox="0 0 52.867 24.837" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
         <g style="stroke-width:1.18738">
           <path id="mkgPath" d="m37.118 16.66-2.966 13.702 11.6-.005-5.212-6.726 7.3-6.97zM4.541 31.812c-.473.728-.797 
@@ -69,7 +69,7 @@
             1.021-.199.255-.314.28-1.315.28h-.922v-1.396h.962c.852 0 .971.01 1.11.095zm-42.476-3.777 21.356.005 3.301-13.731-9.75 8.071 1.554-8.071z" transform="matrix(.84244 0 0 .84194 1.327 -11.951)"/>
         </g>
       </svg>
-    </a>
+    </a> -->
     <script>
         function moveH1() {
           let h1s = document.querySelectorAll('h1');
